--- a/boozy-chrome/manifest.json
+++ b/boozy-chrome/manifest.json
@@ -11,7 +11,7 @@
                 "https://*/*"
             ],
             "css": ["/css/utils.css", "/css/boozychrome.css"],
-            "js": ["/js/lib/jquery-2.1.0.min.js", "/js/lib/underscore-min.js", "/js/boozychrome.js"],
+            "js": ["/js/lib/jquery-2.1.0.min.js", "/js/lib/underscore-min.js", "/js/boozybrowser.js","/js/boozychrome.js"],
             "run_at": "document_end"
         }
     ],
