--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.8.0",
     "gulp": "^3.9.1",
-    "gulp-util": "^3.0.7"
+    "gulp-jshint": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "jshint": "^2.8.0",
+    "jshint-stylish": "^2.2.0"
   }
 }
