--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-register": "^6.8.0",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.0",
+    "gulp-sass": "^2.3.1",
     "gulp-util": "^3.0.7",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.2.0"
