--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.8.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-jshint": "^2.0.0",
     "gulp-sass": "^2.3.1",
     "gulp-util": "^3.0.7",
