--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "babel-core": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.8.0",
+    "browser-sync": "^2.12.5",
+    "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-jshint": "^2.0.0",
     "gulp-sass": "^2.3.1",
     "gulp-util": "^3.0.7",
     "jshint": "^2.8.0",
-    "jshint-stylish": "^2.2.0"
+    "jshint-stylish": "^2.2.0",
+    "morgan": "^1.7.0"
   }
 }
