--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-core": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.8.0",
+    "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
