--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
+    "gulp-angular-templatecache": "^1.8.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-connect": "^4.0.0",
+    "gulp-htmlclean": "^2.7.6",
     "gulp-jshint": "^2.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-util": "^3.0.7",
     "jshint": "^2.8.0",
