--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-util": "^3.0.7",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.2.0",
+    "run-sequence": "^1.1.5",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
