--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-core": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.11.1",
     "babel-register": "^6.8.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
