--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "angular": "^1.5.5"
+    "angular": "^1.5.5",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1"
   }
 }
